hubSide/force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>Objets Réservés sur le web / en boutique</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Numero de reservation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>