hubSide/force-app/main/default/objects/Reservation__c/fields/Adresse_client__c.field-meta.xml
<CustomField>
    <fullName>Adresse_client__c</fullName>
    <formula>Code_Sortie__r.ShippingStreet + &apos; &apos; + Code_Sortie__r.ShippingPostalCode + &apos; &apos; + Code_Sortie__r.ShippingCity + &apos; &apos; +  Code_Sortie__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse client</label>
    <type>Text</type>
</CustomField>