hubSide/force-app/main/default/objects/Reservation__c/fields/Adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison__c</fullName>
    <formula>Client__r.ShippingStreet + &apos; &apos; + Client__r.ShippingPostalCode + &apos; &apos; + Client__r.ShippingCity + &apos; &apos; + Client__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de livraison</label>
    <type>Text</type>
</CustomField>