hubSide/force-app/main/default/objects/Reservation__c/fields/AdyenPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>AdyenPaymentLink__c</fullName>
    <label>URL Caution</label>
    <type>Url</type>
</CustomField>