hubSide/force-app/main/default/objects/Reservation__c/fields/Caution_FlagRelance__c.field-meta.xml
<CustomField>
    <fullName>Caution_FlagRelance__c</fullName>
    <formula>IF(AND(today() = Date_retrait__c - 3, ISBLANK(PspReference__c), NOT(ISBLANK(AdyenPaymentLink__c))) , true, false)</formula>
    <label>Caution_FlagRelance</label>
    <type>Checkbox</type>
</CustomField>