hubSide/force-app/main/default/objects/Reservation__c/fields/CautionAmount__c.field-meta.xml
<CustomField>
    <fullName>CautionAmount__c</fullName>
    <formula>Produit_reserve__r.Produit__r.Prix_indicatif__c / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CautionAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>