hubSide/force-app/main/default/objects/Reservation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservations (Nom du client)</relationshipLabel>
    <relationshipName>Reservations_Client</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>