hubSide/force-app/main/default/objects/Reservation__c/fields/Client_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Client_FirstName__c</fullName>
    <description>get the FirstName of the Client to display it in Caution Email Template</description>
    <formula>Client__r.FirstName</formula>
    <label>Client_FirstName</label>
    <type>Text</type>
</CustomField>