hubSide/force-app/main/default/objects/Reservation__c/fields/Code_distributeur_sortie__c.field-meta.xml
<CustomField>
    <fullName>Code_distributeur_sortie__c</fullName>
    <formula>Code_Sortie__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code distributeur sortie</label>
    <type>Text</type>
</CustomField>