hubSide/force-app/main/default/objects/Reservation__c/fields/Code_Sortie__c.field-meta.xml
<CustomField>
    <fullName>Code_Sortie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code distributeur sortie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservations (Code distributeur sortie)</relationshipLabel>
    <relationshipName>Reservations_DistribSortie</relationshipName>
    <type>Lookup</type>
</CustomField>