hubSide/force-app/main/default/objects/Reservation__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrat permettant de faire une réservation</description>
    <label>Contrat</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Client__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>