hubSide/force-app/main/default/objects/Reservation__c/fields/Date_reservation__c.field-meta.xml
<CustomField>
    <fullName>Date_reservation__c</fullName>
    <description>Date de Reservation en ligne</description>
    <label>Date de reservation</label>
    <type>Date</type>
</CustomField>