hubSide/force-app/main/default/objects/Reservation__c/fields/Date_retour_theorique__c.field-meta.xml
<CustomField>
    <fullName>Date_retour_theorique__c</fullName>
    <formula>Date_retrait__c + Duree_emprunt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de retour théorique</label>
    <type>Date</type>
</CustomField>