hubSide/force-app/main/default/objects/Reservation__c/fields/Date_retrait__c.field-meta.xml
<CustomField>
    <fullName>Date_retrait__c</fullName>
    <description>Date de début d’emprunt</description>
    <label>Date de début de location souhaitée</label>
    <type>Date</type>
</CustomField>