hubSide/force-app/main/default/objects/Reservation__c/fields/Duree_emprunt__c.field-meta.xml
<CustomField>
    <fullName>Duree_emprunt__c</fullName>
    <description>Nombre de jours de l&apos;emprunt</description>
    <label>Duree de l&apos;emprunt (jours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>