hubSide/force-app/main/default/objects/Reservation__c/fields/Email_client__c.field-meta.xml
<CustomField>
    <fullName>Email_client__c</fullName>
    <label>Email client</label>
    <type>Email</type>
</CustomField>