hubSide/force-app/main/default/objects/Reservation__c/fields/Emprunt_cree__c.field-meta.xml
<CustomField>
    <fullName>Emprunt_cree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lie la réservation à l&apos;emprunt créé</description>
    <label>Emprunt créé</label>
    <referenceTo>Emprunt__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>