hubSide/force-app/main/default/objects/Reservation__c/fields/InitialAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>InitialAuthorizationDate__c</fullName>
    <description>Correspond à la date où le client a effectué son dépôt de garantie sur la plateforme de paiement Ayden</description>
    <label>Date de transaction</label>
    <type>DateTime</type>
</CustomField>