hubSide/force-app/main/default/objects/Reservation__c/fields/Magasin_Tech__c.field-meta.xml
<CustomField>
    <fullName>Magasin_Tech__c</fullName>
    <description>Utilisé pour la page &quot;mon espace&quot; de community afin de rendre la valeur non cliquable</description>
    <formula>Code_Sortie__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magasin</label>
    <type>Text</type>
</CustomField>