hubSide/force-app/main/default/objects/Reservation__c/fields/Mode_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_livraison__c</fullName>
    <label>Mode de livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retrait en magasin</fullName>
            </value>
            <value>
                <fullName>Livraison à domicile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>