hubSide/force-app/main/default/objects/Reservation__c/fields/Motif_annulation__c.field-meta.xml
<CustomField>
    <fullName>Motif_annulation__c</fullName>
    <label>Motif de l&apos;annulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>