hubSide/force-app/main/default/objects/Reservation__c/fields/Motif_pre_reservation__c.field-meta.xml
<CustomField>
    <fullName>Motif_pre_reservation__c</fullName>
    <description>Contient la justification du statut pré-réservé.</description>
    <label>Motif pré-réservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Défaut de gamme</fullName>
            </value>
            <value>
                <fullName>Hors stock</fullName>
            </value>
            <value>
                <fullName>Prospect à qualifier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>