hubSide/force-app/main/default/objects/Reservation__c/fields/Nom_produit_reserve__c.field-meta.xml
<CustomField>
    <fullName>Nom_produit_reserve__c</fullName>
    <formula>Produit_reserve__r.Produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du produit réservé</label>
    <type>Text</type>
</CustomField>