hubSide/force-app/main/default/objects/Reservation__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>get Product Name to display it in the Caution email template</description>
    <formula>Produit_reserve__r.Produit__r.Name</formula>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>