hubSide/force-app/main/default/objects/Reservation__c/fields/Produit_choisi__c.field-meta.xml
<CustomField>
    <fullName>Produit_choisi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit choisi</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>