hubSide/force-app/main/default/objects/Reservation__c/fields/Produit_reserve__c.field-meta.xml
<CustomField>
    <fullName>Produit_reserve__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produit réservé</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Stock_produit__c.Statut__c</field>
            <operation>equals</operation>
            <value>En stock, Sortie client, Réservé</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Stock_produit__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>