hubSide/force-app/main/default/objects/Reservation__c/fields/PspReference__c.field-meta.xml
<CustomField>
    <fullName>PspReference__c</fullName>
    <description>Correspond à la référence stockée dans Adyen lorque le client a effectué son dépôt de garantie sur la plateforme de paiement</description>
    <label>Numéro de transaction</label>
    <length>16</length>
    <type>Text</type>
</CustomField>