hubSide/force-app/main/default/objects/Reservation__c/fields/Responsable_reservation__c.field-meta.xml
<CustomField>
    <fullName>Responsable_reservation__c</fullName>
    <formula>CONTAINS($User.Distributeur_de_reference__c, Code_Sortie__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable de la réservation ?</label>
    <type>Checkbox</type>
</CustomField>