hubSide/force-app/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Réservé</fullName>
            </value>
            <value>
                <fullName>Réservation_convertie</fullName>
                <label>Réservation convertie</label>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Pré-réservé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>