hubSide/force-app/main/default/objects/Reservation__c/fields/Stock_disponible__c.field-meta.xml
<CustomField>
    <fullName>Stock_disponible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Vérifie la disponibilité du stock selectionné (back end)</description>
    <label>Stock disponible sur la période ?</label>
    <type>Checkbox</type>
</CustomField>