hubSide/force-app/main/default/objects/Reservation__c/fields/Store_address__c.field-meta.xml
<CustomField>
    <fullName>Store_address__c</fullName>
    <formula>Code_Sortie__r.ShippingStreet + &apos; &apos; + Code_Sortie__r.ShippingPostalCode + &apos; &apos; + Code_Sortie__r.ShippingCity + &apos; &apos; + Code_Sortie__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de la boutique</label>
    <type>Text</type>
</CustomField>