hubSide/force-app/main/default/objects/Reservation__c/recordTypes/Nouvelle_reservation.recordType-meta.xml
<RecordType>
    <fullName>Nouvelle_reservation</fullName>
    <active>true</active>
    <description>Record type pour la création de l&apos;objet Reservation</description>
    <label>Nouvelle reservation</label>
</RecordType>