hubSide/force-app/main/default/objects/Reservation__c/recordTypes/Reservation_convertie.recordType-meta.xml
<RecordType>
    <fullName>Reservation_convertie</fullName>
    <active>true</active>
    <description>Layout Read-Only pour les réservations converties</description>
    <label>Reservation convertie</label>
</RecordType>