hubSide/force-app/main/default/objects/Reservation__c/recordTypes/Reservation_pre_reservee.recordType-meta.xml
<RecordType>
    <fullName>Reservation_pre_reservee</fullName>
    <active>true</active>
    <label>Réservation pré-réservée</label>
</RecordType>