hubSide/force-app/main/default/objects/Reservation__c/validationRules/Le_stock_nest_pas_disponible.validationRule-meta.xml
<ValidationRule>
    <fullName>Le_stock_nest_pas_disponible</fullName>
    <active>true</active>
    <description>Le stock n&apos;est pas disponible sur la période demandée.</description>
    <errorConditionFormula>AND(
    Stock_disponible__c == FALSE, 
    ISPICKVAL(Status__c, &apos;Réservé&apos;)
)</errorConditionFormula>
    <errorMessage>Le stock n&apos;est pas disponible sur la période demandée.</errorMessage>
</ValidationRule>