hubSide/force-app/main/default/objects/Reservation__c/validationRules/Motif_annulation.validationRule-meta.xml
<ValidationRule>
    <fullName>Motif_annulation</fullName>
    <active>true</active>
    <description>Rendre obligatoire le champ motif d&apos;annulation, si le statut est &quot;Annulé&quot;</description>
    <errorConditionFormula>ISBLANK( Motif_annulation__c ) 
 &amp;&amp; 
 ISPICKVAL( Status__c ,&quot;Annulé&quot;)</errorConditionFormula>
    <errorMessage>Le champ motif d&apos;annulation doit être rempli si le statut de la réservation est &quot;Annulé&quot;</errorMessage>
</ValidationRule>