hubSide/force-app/main/default/objects/Reservation__c/validationRules/Reservation_convertie_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Reservation_convertie_Location</fullName>
    <active>true</active>
    <description>Les champs produit et client ne sont plus modifiable une fois que le statut est &quot; Réservation convertie&quot;</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Réservation_convertie&quot;), 
    OR(
        ISCHANGED(Client__c), 
        ISCHANGED(Produit_reserve__c)
    )
)</errorConditionFormula>
    <errorMessage>La réservation n&apos;est plus modifiable une fois convertie en emprunt.</errorMessage>
</ValidationRule>