hubSide/force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produit_reserve__c</columns>
    <columns>Date_retrait__c</columns>
    <columns>Duree_emprunt__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>