hubSide/force-app/main/default/objects/Reservation__c/listViews/Reservations.listView-meta.xml
<ListView>
    <fullName>Reservations</fullName>
    <columns>Nom_produit_reserve__c</columns>
    <columns>Date_retrait__c</columns>
    <columns>Status__c</columns>
    <columns>Magasin_Tech__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes réservations en cours</label>
</ListView>