hubSide/force-app/main/default/objects/Reservation__c/listViews/Reservations_a_venir.listView-meta.xml
<ListView>
    <fullName>Reservations_a_venir</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date_retrait__c</columns>
    <columns>Produit_reserve__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Responsable_reservation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Date_retrait__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Réservé</value>
    </filters>
    <label>Réservations à venir</label>
</ListView>