hubSide/force-app/main/default/objects/Reservation__c/listViews/Reservations_du_jour.listView-meta.xml
<ListView>
    <fullName>Reservations_du_jour</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Produit_reserve__c</columns>
    <columns>Duree_emprunt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_retrait__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Responsable_reservation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Réservations du jour</label>
</ListView>